# Wapiti

./: CMakeLists.txt  INSTALL
cmake/: CMakeLists.txt  FindWapiti.cmake
scripts/: compile.sh
src/: CMakeLists.txt  decoder.c  decoder.h  gradient.h  model.h  options.h  quark.h  reader.h  sequence.h
